[project]
name = "vidtoolz-enhance-audio-of-a-video"
version = "0.0.1"
description = "Enhance audio of a video using ffmpeg"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-enhance-audio-of-a-video"
Changelog = "https://github.com/sukhbinder/vidtoolz-enhance-audio-of-a-video/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-enhance-audio-of-a-video/issues"
CI = "https://github.com/sukhbinder/vidtoolz-enhance-audio-of-a-video/actions"

[project.entry-points."vidtoolz_plugins"]
enhance = "vidtoolz_enhance_audio_of_a_video:enhance_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
